--- a/week2.html
+++ b/week2.html
@@ -118,13 +118,13 @@
     <!-- Side by Side images here-->
     <div class="row_w2" style="text-align: center;">
       <div class="column_w2">
-        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="charlottedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="width:40%"> <br> <br>
       </div>
       <div class="column_w2">
-        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="kiannedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="width:40%"> <br> <br>
       </div>
       <div class="column_w2">
-        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="kiannedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="width:40%"> <br> <br>
       </div>
     </div>
 
