--- a/week3.html
+++ b/week3.html
@@ -53,7 +53,24 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
-      “Mapping” [Audio, Visual, Physical] feedback with Object interaction.
+      Decision making on the chosen object - The Box.
+    </p>
+
+    <p class="pcontent">
+      Evolution of the chosen form.
+      <div class="column_w2">
+        <img src="IMAGE/box(1).JPG" alt="charlottedp" style="width:40%"> <br> <br>
+      </div>
+      <div class="column_w2">
+        <img src="IMAGE/box(2).jpg" alt="kiannedp" style="width:40%"> <br> <br>
+      </div>
+      <div class="column_w2">
+        <img src="IMAGE/box(3).jpg" alt="kiannedp" style="width:40%"> <br> <br>
+      </div>
+    </p>
+
+    <p class="pcontent">
+      Microbit interaction with the box.
     </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
