--- a/week3.html
+++ b/week3.html
@@ -59,13 +59,19 @@
     <p class="pcontent">
       Evolution of the chosen form.
       <div class="column_w2">
-        <img src="IMAGE/box(1).JPG" alt="charlottedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/box(1).JPG" alt="box(1)" style="width:40%"> <br> <br>
       </div>
       <div class="column_w2">
-        <img src="IMAGE/box(2).jpg" alt="kiannedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/box(2).jpg" alt="box(2)" style="width:40%"> <br> <br>
       </div>
       <div class="column_w2">
-        <img src="IMAGE/box(3).jpg" alt="kiannedp" style="width:40%"> <br> <br>
+        <img src="IMAGE/box(3).jpg" alt="box(3)" style="width:40%"> <br> <br>
+      </div>
+      <div class="column_w2">
+        <img src="IMAGE/box(4).jpg" alt="box(4)" style="width:40%"> <br> <br>
+      </div>
+      <div class="column_w2">
+        <img src="IMAGE/box(5).jpg" alt="box(5)" style="width:40%"> <br> <br>
       </div>
     </p>
 
