--- a/week3.html
+++ b/week3.html
@@ -60,19 +60,19 @@
       Evolution of the chosen form.
       <div class="row_w3">
         <div class="column_w3">
-          <img src="IMAGE/box(1).JPG" alt="box(1)" style="width:40%"> <br> <br>
+          <img src="IMAGE/box(1).JPG" alt="box(1)" style="height: 20px;"> <br>
         </div>
         <div class="column_w3">
-          <img src="IMAGE/box(2).jpg" alt="box(2)" style="width:40%"> <br> <br>
+          <img src="IMAGE/box(2).jpg" alt="box(2)" style="width:40%"> <br>
         </div>
         <div class="column_w3">
-          <img src="IMAGE/box(3).jpg" alt="box(3)" style="width:40%"> <br> <br>
+          <img src="IMAGE/box(3).jpg" alt="box(3)" style="width:40%"> <br>
         </div>
         <div class="column_w3">
-          <img src="IMAGE/box(4).jpg" alt="box(4)" style="width:40%"> <br> <br>
+          <img src="IMAGE/box(4).jpg" alt="box(4)" style="width:40%"> <br>
         </div>
         <div class="column_w3">
-          <img src="IMAGE/box(5).jpg" alt="box(5)" style="width:40%"> <br> <br>
+          <img src="IMAGE/box(5).jpg" alt="box(5)" style="width:40%"> <br>
         </div>
       </div>
     </p>
