--- a/index.html
+++ b/index.html
@@ -70,31 +70,30 @@
 </div>
 
    <!-- Side by Side images here-->
-<!--
+
    <div class="row_w2" style="text-align: center;">
     <div class="column_w2">
-      <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="width:60%">
+      <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="height: 200px;">
     </div>
     <div class="column_w2">
-      <img src="IMAGE/GitHub raw-02.png" alt="WEEK 2" style="width:60%">
+      <img src="IMAGE/GitHub raw-02.png" alt="WEEK 2" style="height: 200px;">
     </div>
     <div class="column_w2">
-      <img src="IMAGE/GitHub raw-03.png" alt="WEEK 3" style="width:60%">
+      <img src="IMAGE/GitHub raw-03.png" alt="WEEK 3" style="height: 200px;">
     </div>
   </div>
   <br>
   <div class="row2" style="text-align: center;">
     <div class="column_w2">
-      <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="width:60%">
+      <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="height: 200px;">
     </div>
     <div class="column_w2">
-      <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="width:60%">
+      <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="height: 200px;">
     </div>
     <div class="column_w2">
-      <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width:60%">
+      <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="height: 200px;">
     </div>
   </div>
--->
 
   <br>
   <br>
