--- a/week3.html
+++ b/week3.html
@@ -61,18 +61,26 @@
       <div class="row_w3">
         <div class="column_w3">
           <img src="IMAGE/box(1).JPG" alt="box(1)" style="height: 150px;"> <br>
+          An 80mm cube, self-made using self-cut acrylic or plywood and connected with finger joints. The lid is not obvious but
+          is removable.
         </div>
         <div class="column_w3">
           <img src="IMAGE/box(2).jpg" alt="box(2)" style="height: 150px;"> <br>
+          A regular and larger rectangular packaging box.
         </div>
         <div class="column_w3">
           <img src="IMAGE/box(3).jpg" alt="box(3)" style="height: 150px;"> <br>
+          A smaller and shallower rectangular box with a lid. But this aspect ratio and box depth hinted at some specific objects
+          that could fit within, so we decided to work on a cube instead.
         </div>
         <div class="column_w3">
           <img src="IMAGE/box(4).jpg" alt="box(4)" style="height: 150px;"> <br>
+          A cube with a removable lid. But if we wanted our users to instinctively throw the box, this method of opening may
+          create a vulnerable spot on the box as the lid has a tendency to fall out.
         </div>
         <div class="column_w3">
           <img src="IMAGE/box(5).jpg" alt="box(5)" style="height: 150px;"> <br>
+          A cube with a lid. This form was a choice with best of both worlds.
         </div>
       </div>
     </p>
