--- a/week3.html
+++ b/week3.html
@@ -80,7 +80,7 @@
         </div>
         <div class="column_w3">
           <img src="IMAGE/box(5).jpg" alt="box(5)" style="height: 150px;"> <br>
-          A cube with a lid. This form was a choice with best of both worlds.
+          <p class="pcontent"> A cube with a lid. This form was a choice with best of both worlds.</p>
         </div>
       </div>
     </p>
