--- a/week3.html
+++ b/week3.html
@@ -53,7 +53,13 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
-      Decision making on the chosen object - The Box.
+      Decision making on the chosen object - The Box. Our considering factors were based on the potential of success, possibilities of
+      actions and objective of the module. It was a tough choice between the Swivel Chair and the Box because both were very promising.
+      In the end, the box won because of the greater possibility of actions it could perform compared to the chair.
+    </p>
+
+    <p class="pcontent">
+      Microbit interaction with the box. <!--INSERT PICS HERE-->
     </p>
 
     <p class="pcontent">
@@ -83,10 +89,6 @@
           <p class="pcontent">A cube with a lid. This form was a choice with best of both worlds.</p>
         </div>
       </div>
-    </p>
-
-    <p class="pcontent">
-      Microbit interaction with the box.
     </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
