--- a/week3.html
+++ b/week3.html
@@ -76,13 +76,15 @@
         </div>
         <div class="column_w3">
           <img src="IMAGE/box(3).jpg" alt="box(3)" style="height: 150px;"> <br>
-          <p class="pcontent">A smaller and shallower rectangular box with a lid. But this aspect ratio and box depth hinted at some specific objects
-          that could fit within, so we decided to work on a cube instead.</p>
+          <p class="pcontent">A smaller and shallower rectangular box with a lid. But this aspect ratio and box depth
+            hinted at some specific objects that could fit within, so we decided to work on a cube instead.
+          </p>
         </div>
         <div class="column_w3">
           <img src="IMAGE/box(4).jpg" alt="box(4)" style="height: 150px;"> <br>
-          <p class="pcontent">A cube with a removable lid. But if we wanted our users to instinctively throw the box, this method of opening may
-          create a vulnerable spot on the box as the lid has a tendency to fall out.</p>
+          <p class="pcontent">A cube with a removable lid. But if we wanted our users to instinctively throw the box, 
+            this method of opening may create a vulnerable spot on the box as the lid has a tendency to fall out.
+          </p>
         </div>
         <div class="column_w3">
           <img src="IMAGE/box(5).jpg" alt="box(5)" style="height: 150px;"> <br>
