--- a/week2.html
+++ b/week2.html
@@ -118,14 +118,16 @@
     <!-- Side by Side images here-->
     <div class="row_w2" style="text-align: center;">
       <div class="column_w2">
-        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 200px;">
-        <figcaption style="text-align: center;">Fig.1 - Trulli, Puglia, Italy.</figcaption> <br>
+        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
+        <figcaption style="text-align: center;"> <i>Chair reacting to availability.</i> </figcaption> <br>
       </div>
       <div class="column_w2">
-        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 200px;"> <br>
+        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
+        <figcaption style="text-align: center;"> <i>Chair reacting to swiveling.</i> </figcaption> <br>
       </div>
       <div class="column_w2">
-        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="height: 200px;"> <br>
+        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 215px;">
+        <figcaption style="text-align: center;"> <i>Chair reacting to movement.</i> </figcaption> <br>
       </div>
     </div>
 
