--- a/week4.html
+++ b/week4.html
@@ -26,23 +26,38 @@
 <body>
   <!-- ------------------------------------------ EDIT WEEKLY CONTENT HERE ------------------------------------------------- -->
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
-    <h2>Class Exercise</h2>
-    <p>
-      Lorem ipsum dolor amet.
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
+    <p class="pcontent">
+      What happens when your realise that your code starts getting complicated and repetitive?
+      This is where Object-Oriented Progamming (OOP) comes into play!
 
-      <br>
+      Besides that, we also learned about how to make a Neopixel (aka a strip of LED lights?) change colour.
+    </p>
 
-      Problems faced <br>
+    <p class="pcontent">
+      <i>Problems faced</i> <br>
+      It was a little tricky trying to make the variable resistor work because the varying resistor in the diagram looked 
+      different from the actual component. But with some technical knowledge and a few attempts, we were able to make it work! 
+      The feeling of accomplishment made the confusion worthwhile.
+    </p>
 
-      Lessons learnt <br>
+    <p class="pcontent">
+      <i>Lessons learnt</i> <br>
+      I think the greatest takeaway from this lesson was the basic knowledge of building a website from scratch. I was suddenly 
+      exposed to a world of possibilties - where (almost) anything can be created with logical thinking.
+    </p>
 
-      Possible applications <br>
+    <p class="pcontent">
+      <i>Possible applications</i> <br>
+      With the ability to connect and control external components to the mircrobit, we could perhaps attach other critical sensors 
+      and perhaps a battery casing to power the microbit remotely. <br>
     </p>
   </div>
 
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px;">
-    <h2>Microbit Project Progress</h2>
+    <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Microbit Project Progress</h2>
     <p class="pcontent">
+      <!-- Need to sketch out (is this literal) what our OOP is, and state transition diagram. or is it the same? -->
       “Mapping” [Audio, Visual, Physical] feedback with Object interaction.
     <ul>
       <li>Closed Box (with mewing sounds): [action] Open lid > [audio feedback] Mewing sounds stop</li>
