--- a/week2.html
+++ b/week2.html
@@ -115,6 +115,9 @@
       on the backrest to indicate whether a chair was occupied or not. This could signify the availability of seats in the studio, hence
       serving a pragmatic function beyond play.
     </p>
+
+    <br>
+
     <!-- Side by Side images here-->
     <div class="row_w2" style="text-align: center;">
       <div class="column_w2">
@@ -132,8 +135,8 @@
     </div>
 
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
-    <img src="IMAGE/box(1).JPG" style="height: 80px;">
-    <img style="text-align: center;" src="IMAGE/dice.JPG"; height="80px">
+    <img style="text-align: center;" src="IMAGE/box(1).JPG" style="height: 300px;">
+    <img style="text-align: center;" src="IMAGE/dice.JPG"; height="300px">
     <p class="pcontent">
     </p>
     <div class="row_w2">
