--- a/week2.html
+++ b/week2.html
@@ -135,8 +135,15 @@
     </div>
 
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
-    <img style="text-align: center;" src="IMAGE/box(1).JPG" style="height: 150px;">
-    <img style="text-align: center;" src="IMAGE/dice.JPG"; height="150px">
+    <div class="row_aboutus" style="text-align: center;">
+      <div class="column_aboutus">
+        <img style="text-align: center;" src="IMAGE/box(1).JPG" style="height: 150px;">
+      </div>
+      <div class="column_aboutus">
+        <img style="text-align: center;" src="IMAGE/dice.JPG"; height="150px">
+      </div>
+    </div>
+
     <p class="pcontent">
     </p>
     <div class="row_w2">
