--- a/week2.html
+++ b/week2.html
@@ -137,7 +137,7 @@
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
     <div class="row_aboutus" style="text-align: center;">
       <div class="column_aboutus">
-        <img style="text-align: center;" src="IMAGE/box(1).JPG" style="height: 150px;">
+        <img style="text-align: center;" src="IMAGE/box(1).JPG" height="150px;">
       </div>
       <div class="column_aboutus">
         <img style="text-align: center;" src="IMAGE/dice.JPG"; height="150px">
