--- a/week2.html
+++ b/week2.html
@@ -121,15 +121,15 @@
     <!-- Side by Side images here-->
     <div class="row_w2" style="text-align: center;">
       <div class="column_w2">
-        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
+        <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 210px;"> <br>
         <figcaption style="text-align: center;"> <i>Chair reacting to availability.</i> </figcaption> <br>
       </div>
       <div class="column_w2">
-        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
+        <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="height: 210px;"> <br>
         <figcaption style="text-align: center;"> <i>Chair reacting to swiveling.</i> </figcaption> <br>
       </div>
       <div class="column_w2">
-        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 215px;">
+        <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 210px;">
         <figcaption style="text-align: center;"> <i>Chair reacting to movement.</i> </figcaption> <br>
       </div>
     </div>
@@ -137,10 +137,10 @@
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
     <div class="row_aboutus" style="text-align: center;">
       <div class="column_aboutus">
-        <img style="text-align: center;" src="IMAGE/box(1).JPG" height="150px;">
+        <img style="text-align: center;" src="IMAGE/box(1).JPG" width="325px">
       </div>
       <div class="column_aboutus">
-        <img style="text-align: center;" src="IMAGE/dice.JPG"; height="150px">
+        <img style="text-align: center;" src="IMAGE/dice.JPG"; width="325px">
       </div>
     </div>
 
