--- a/week2.html
+++ b/week2.html
@@ -119,16 +119,16 @@
     <br>
 
     <!-- Side by Side images here-->
-    <div class="row_w2" style="text-align: center;">
-      <div class="column_w2">
+    <div class="row_3" style="text-align: center;">
+      <div class="column_3">
         <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> <i>Chair reacting to availability.</i> </figcaption> <br>
       </div>
-      <div class="column_w2">
+      <div class="column_3">
         <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
         <figcaption style="text-align: center;"> <i>Chair reacting to swiveling.</i> </figcaption> <br>
       </div>
-      <div class="column_w2">
+      <div class="column_3">
         <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 215px;">
         <figcaption style="text-align: center;"> <i>Chair reacting to movement.</i> </figcaption> <br>
       </div>
@@ -147,14 +147,14 @@
     <p class="pcontent">
     </p>
     <div class="row_w2">
-        <div class="column_w2" style="text-align: center;">
-          <img src="IMAGE/shakecube.png" alt="shakecube" style="width:20%">
+        <div class="column_3" style="text-align: center;">
+          <img src="IMAGE/shakecube.png" alt="shakecube" width="500px">
         </div>
-        <div class="column_w2">
-          <img src="IMAGE/spincube.png" alt="spincube" style="width:20%">
+        <div class="column_3">
+          <img src="IMAGE/spincube.png" alt="spincube" width="500px">
         </div>
-        <div class="column_w2">
-          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" style="width:20%">
+        <div class="column_3">
+          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" width="500px">
         </div>
     </div>
   </div>
