--- a/week3.html
+++ b/week3.html
@@ -65,28 +65,28 @@
     <p class="pcontent">
       Evolution of the chosen form.
       <div class="row_w3">
-        <div class="column_w3">
+        <div class="column_5">
           <img src="IMAGE/box(1).JPG" alt="box(1)" style="height: 150px;"> <br>
           <p class="pcontent">An 80mm cube, self-made using self-cut acrylic or plywood and connected with finger joints. The lid is not obvious but
           is removable.</p>
         </div>
-        <div class="column_w3">
+        <div class="column_5">
           <img src="IMAGE/box(2).jpg" alt="box(2)" style="height: 150px;"> <br>
           <p class="pcontent">A regular and larger rectangular packaging box.</p>
         </div>
-        <div class="column_w3">
+        <div class="column_5">
           <img src="IMAGE/box(3).jpg" alt="box(3)" style="height: 150px;"> <br>
           <p class="pcontent">A smaller and shallower rectangular box with a lid. But this aspect ratio and box depth
             hinted at some specific objects that could fit within, so we decided to work on a cube instead.
           </p>
         </div>
-        <div class="column_w3">
+        <div class="column_5">
           <img src="IMAGE/box(4).jpg" alt="box(4)" style="height: 150px;"> <br>
           <p class="pcontent">A cube with a removable lid. But if we wanted our users to instinctively throw the box, 
             this method of opening may create a vulnerable spot on the box as the lid has a tendency to fall out.
           </p>
         </div>
-        <div class="column_w3">
+        <div class="column_5">
           <img src="IMAGE/box(5).jpg" alt="box(5)" style="height: 150px;"> <br>
           <p class="pcontent">A cube with a lid. This form was a choice with best of both worlds.</p>
         </div>
