--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
       <br>
 
       <!-- Side by Side images here-->
-      <div class="row_aboutus" style="text-align: center;">
-        <div class="column_aboutus">
+      <div class="row_2" style="text-align: center;">
+        <div class="column_2">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
           <a href="https://char-hy.github.io/id2116/" target="_blank">CHARLOTTE HO</a>
           <!-- <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a> -->
         </div>
-        <div class="column_aboutus">
+        <div class="column_2">
           <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
           <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
         </div>
@@ -71,16 +71,16 @@
 
    <!-- Side by Side images here-->
 <p>
-  <div class="row_w2" style="text-align: center;">
+  <div class="row_3" style="text-align: center;">
     <div class="column_w2">
       <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="height: 200px;"> <br>
       <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="height: 200px;">
     </div>
-    <div class="column_w2">
+    <div class="column_3">
       <img src="IMAGE/GitHub raw-02.png" alt="WEEK 2" style="height: 200px;"> <br>
       <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="height: 200px;">
     </div>
-    <div class="column_w2">
+    <div class="column_3">
       <img src="IMAGE/GitHub raw-03.png" alt="WEEK 3" style="height: 200px;"> <br>
       <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="height: 200px;">
     </div>
