--- a/week2.html
+++ b/week2.html
@@ -157,6 +157,12 @@
           <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" width="250px">
         </div>
     </div>
+
+    <p> blank </p>
+    <p> blank </p>
+    <p> blank </p>
+    <p> blank </p>
+    
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
