--- a/week3.html
+++ b/week3.html
@@ -92,6 +92,11 @@
         </div>
       </div>
     </p>
+
+    <p> blank </p>
+    <p> blank </p>
+    <p> blank </p>
+    <p> blank </p>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
