--- a/week4.html
+++ b/week4.html
@@ -32,25 +32,22 @@
       This is where Object-Oriented Progamming (OOP) comes into play!
 
       Besides that, we also learned about how to make a Neopixel (aka a strip of LED lights?) change colour.
+      However, one disadvantage is that Bluetooth does not work on the Microbit while Neopixel is in use.
     </p>
 
     <p class="pcontent">
       <i>Problems faced</i> <br>
-      It was a little tricky trying to make the variable resistor work because the varying resistor in the diagram looked 
-      different from the actual component. But with some technical knowledge and a few attempts, we were able to make it work! 
-      The feeling of accomplishment made the confusion worthwhile.
+      Connectivity.
     </p>
 
     <p class="pcontent">
       <i>Lessons learnt</i> <br>
-      I think the greatest takeaway from this lesson was the basic knowledge of building a website from scratch. I was suddenly 
-      exposed to a world of possibilties - where (almost) anything can be created with logical thinking.
+      In progress...
     </p>
 
     <p class="pcontent">
       <i>Possible applications</i> <br>
-      With the ability to connect and control external components to the mircrobit, we could perhaps attach other critical sensors 
-      and perhaps a battery casing to power the microbit remotely. <br>
+      Changing the shade of light in response to the varying values of the variables. <br>
     </p>
   </div>
 
