--- a/week3.html
+++ b/week3.html
@@ -92,12 +92,12 @@
         </div>
       </div>
     </p>
-
-    <p> blank </p>
-    <p> blank </p>
-    <p> blank </p>
-    <p> blank </p>
   </div>
+
+  <div>
+    BLANK
+  </div>
+  
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
     <footer style="margin-left: -10px; margin-right: -10px;">
