--- a/week2.html
+++ b/week2.html
@@ -157,13 +157,12 @@
           <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" width="250px">
         </div>
     </div>
-
-    <p> blank </p>
-    <p> blank </p>
-    <p> blank </p>
-    <p> blank </p>
-    
   </div>
+
+  <div>
+    BLANK
+  </div>
+  
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
   <footer style="margin-left: -10px; margin-right: -10px;">
