--- a/week3.html
+++ b/week3.html
@@ -94,10 +94,10 @@
     </p>
   </div>
 
-  <div>
-    BLANK
-  </div>
-  
+<p>THIS IS CHANGED</p>
+
+</body> 
+
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
 
     <footer style="margin-left: -10px; margin-right: -10px;">
@@ -119,7 +119,5 @@
         <br>
         <br>
       </footer>
-
-</body> 
 
 </html>
