--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
    <!-- Side by Side images here-->
 <p>
   <div class="row_3" style="text-align: center;">
-    <div class="column_w2">
+    <div class="column_3">
       <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="height: 200px;"> <br>
       <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="height: 200px;">
     </div>
