--- a/week2.html
+++ b/week2.html
@@ -146,7 +146,7 @@
 
     <p class="pcontent">
     </p>
-    <div class="row_w2">
+    <div class="row_3">
         <div class="column_3" style="text-align: center;">
           <img src="IMAGE/shakecube.png" alt="shakecube" width="250px">
         </div>
