--- a/week2.html
+++ b/week2.html
@@ -122,15 +122,15 @@
     <div class="row_3" style="text-align: center;">
       <div class="column_3">
         <img src="IMAGE/Chair_Sitting - Copy.PNG" alt="Chair_Sitting" style="height: 215px;"> <br>
-        <figcaption style="text-align: center;"> <i>Chair reacting to availability.</i> </figcaption> <br>
+        <figcaption style="text-align: center;"> Chair reacting to availability. </figcaption> <br>
       </div>
       <div class="column_3">
         <img src="IMAGE/Chair_Twisting - Copy.PNG" alt="Chair_Twisting" style="height: 215px;"> <br>
-        <figcaption style="text-align: center;"> <i>Chair reacting to swiveling.</i> </figcaption> <br>
+        <figcaption style="text-align: center;"> Chair reacting to swiveling. </figcaption> <br>
       </div>
       <div class="column_3">
         <img src="IMAGE/Chair_Moving - Copy.PNG" alt="Chair_Moving" style="height: 215px;">
-        <figcaption style="text-align: center;"> <i>Chair reacting to movement.</i> </figcaption> <br>
+        <figcaption style="text-align: center;"> Chair reacting to movement. </figcaption> <br>
       </div>
     </div>
 
@@ -149,12 +149,15 @@
     <div class="row_3">
         <div class="column_3" style="text-align: center;">
           <img src="IMAGE/shakecube.png" alt="shakecube" width="250px">
+          <figcaption style="text-align: center;"> Box reacting to shaking. </figcaption> <br>
         </div>
         <div class="column_3">
           <img src="IMAGE/spincube.png" alt="spincube" width="250px">
+          <figcaption style="text-align: center;"> Box reacting to spinning. </figcaption> <br>
         </div>
         <div class="column_3">
           <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" width="250px">
+          <figcaption style="text-align: center;"> Box reacting with music to tilting. </figcaption> <br>
         </div>
     </div>
   </div>
