--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
 </div>
 
    <!-- Side by Side images here-->
-<p>
+<div>
+   <p>
   <div class="row_3" style="text-align: center;">
     <div class="column_3">
       <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="height: 200px;"> <br>
@@ -85,6 +86,7 @@
       <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="height: 200px;">
     </div>
 </p>
+</div>
 
 <footer style="margin-left: -10px; margin-right: -10px;">
   <br>
