--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
    <p>
   <div class="row_3" style="text-align: center;">
     <div class="column_3">
-      <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="height: 200px;"> <br>
-      <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="height: 200px;">
+      <img src="IMAGE/GitHub raw-01.png" alt="WEEK 1" style="width: 300px"> <br>
+      <img src="IMAGE/GitHub raw-04.png" alt="WEEK 4" style="width: 300px">
     </div>
     <div class="column_3">
-      <img src="IMAGE/GitHub raw-02.png" alt="WEEK 2" style="height: 200px;"> <br>
-      <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="height: 200px;">
+      <img src="IMAGE/GitHub raw-02.png" alt="WEEK 2" style="width: 300px"> <br>
+      <img src="IMAGE/GitHub raw-05.png" alt="WEEK 5" style="width: 300px">
     </div>
     <div class="column_3">
-      <img src="IMAGE/GitHub raw-03.png" alt="WEEK 3" style="height: 200px;"> <br>
-      <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="height: 200px;">
+      <img src="IMAGE/GitHub raw-03.png" alt="WEEK 3" style="width: 300px"> <br>
+      <img src="IMAGE/GitHub raw-06.png" alt="WEEK 6" style="width: 300px">
     </div>
 </p>
 </div>
