--- a/week2.html
+++ b/week2.html
@@ -148,15 +148,15 @@
     </p>
     <div class="row_3">
         <div class="column_3" style="text-align: center;">
-          <img src="IMAGE/shakecube.png" alt="shakecube" width="250px">
+          <img src="IMAGE/shakecube.png" alt="shakecube" height="250px">
           <figcaption style="text-align: center;"> Box reacting to shaking. </figcaption> <br>
         </div>
         <div class="column_3">
-          <img src="IMAGE/spincube.png" alt="spincube" width="250px">
+          <img src="IMAGE/spincube.png" alt="spincube" height="250px">
           <figcaption style="text-align: center;"> Box reacting to spinning. </figcaption> <br>
         </div>
         <div class="column_3">
-          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" width="250px">
+          <img src="IMAGE/tiltcubemusic.png" alt="tiltcubemusic" height="250px">
           <figcaption style="text-align: center;"> Box reacting with music to tilting. </figcaption> <br>
         </div>
     </div>
