--- a/week2.html
+++ b/week2.html
@@ -135,12 +135,12 @@
     </div>
 
     <h2 style="font-weight: normal; font-size: 25px; text-align: left;">Box</h2>
-    <div class="row_aboutus" style="text-align: center;">
-      <div class="column_aboutus">
-        <img style="text-align: center;" src="IMAGE/box(1).JPG" width="300px">
+    <div class="row_2" style="text-align: center;">
+      <div class="column_2">
+        <img style="text-align: center;" src="IMAGE/box(1).JPG" width="400px">
       </div>
-      <div class="column_aboutus">
-        <img style="text-align: center;" src="IMAGE/dice.JPG"; width="300px">
+      <div class="column_2">
+        <img style="text-align: center;" src="IMAGE/dice.JPG"; width="400px">
       </div>
     </div>
 
