putting back images for microbit experiments

--- a/week5.html
+++ b/week5.html
@@ -3,14 +3,14 @@
   
 <head>
   <meta charset="utf-8">
-  <title>Charki-Week 4</title>
+  <title>Charki-Week 5</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
 
   <div class="hero-image" "header">
    <div class="hero-text">
      <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
-     <h3>Week 4   |   07.02.2020</h3>
+     <h3>Week 5   |   14.02.2020</h3>
      <p><i>Written and edited by Charlotte Ho and Kianne Lim.</i></p>
      <style>
       div{
@@ -63,8 +63,10 @@
       <li>Empty Box (with something in it): [action] takes out object (inside box) > [audio feedback] plays MC Hammer - You Can't Touch This.</li>
     </ul>
     </p>
-
-    <img 
+    <img src="IMAGE/shakecube.png" alt="box(4)" style="height: 150px;"> <br>
+    <img src="IMAGE/spincube.png" alt="box(4)" style="height: 150px;"> <br>
+    <img src="IMAGE/tiltcubemusic.png" alt="box(4)" style="height: 150px;"> <br>
+    <img src="IMAGE/spincube.png" alt="box(4)" style="height: 150px;"> <br>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
   <style>
