add brainstorming pics to page

--- a/week5.html
+++ b/week5.html
@@ -67,6 +67,9 @@
     <img src="IMAGE/spincube.png" alt="box(4)" style="height: 800px;"> <br>
     <img src="IMAGE/tiltcubemusic.png" alt="box(4)" style="height: 800px;"> <br>
     <img src="IMAGE/spincube.png" alt="box(4)" style="height: 800px;"> <br>
+
+    <img src="IMAGE/brainstorming1.jpg" alt="box(4)" style="height: 800px;"> <br>
+    <img src="IMAGE/brainstorming2.jpg" alt="box(4)" style="height: 800px;"> <br>
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
   <style>
