fixing <br/> brackets after profile pictures

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
       <!-- Side by Side images here-->
       <div class="row_2" style="text-align: center;">
         <div class="column_2">
-          <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br> <br>
+          <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br/> <br/>
           <a href="https://char-hy.github.io/id2116/" target="_blank">CHARLOTTE HO</a>
           <!-- <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a> -->
         </div>
         <div class="column_2">
-          <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br> <br>
+          <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br/> <br/>
           <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
         </div>
       </div>
