--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 300px; padding-right: 300px; background-color:snow;">
   <h2> About Us </h2>
     <p>
-      Hello! We are Charlotte and Kianne, two budding Industrial Designers striving to make a difference in the world of design.
-      In the meantime, we camp behind a whiteboard and snack on almonds and blueberries while building this very webpage.
+      Hello! We are Charlotte and Kianne, two budding Industrial Designers. <br/> We strive to make a difference in the world of design.<br/>
+      Meanwhile, we camp behind a whiteboard and snack on almonds and blueberries.
       
 
       <br/>
