--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       <div class="row_2" style="text-align: center;">
         <div class="column_2">
           <img src="IMAGE/charlottedp.png" alt="charlottedp" style="width:40%"> <br/> <br/>
-          <a href="https://char-hy.github.io/id2116/" target="_blank">CHARLOTTE HO</a>
+          <a href="https://char-hy.github.io/id2116/" target="_blank">charlala</a>
           <!-- <a href="https://charlotteho.weebly.com/" target="_blank">CHARLOTTE HO</a> -->
         </div>
         <div class="column_2">
           <img src="IMAGE/kiannedp.png" alt="kiannedp" style="width:40%"> <br/> <br/>
-          <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">KIANNE LIM</a>
+          <a href="https://kiannelim.github.io/id2116/kianne.html" target="_blank">kinana</a>
         </div>
       </div>
     </p>
