intro copy edit

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 300px; padding-right: 300px; background-color:snow;">
   <h2> About Us </h2>
     <p>
-      Hello! We are Charlotte and Kianne, two budding Industrial Designers. <br/> We strive to make a difference in the world of design.<br/>
-      Meanwhile, we camp behind a whiteboard and snack on almonds and blueberries.
+      Just two industrial designers camping behind a whiteboard, and snacking on almonds and blueberries..
       
 
       <br/>
