--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
 <div style="padding-top: 60px; padding-left: 250px; padding-right: 250px; padding-bottom: 40px; text-align: center;">
   <h2> Weekly Documentation </h2>
     <p style="margin-left: 20px; margin-right: 20px;">
-      This webpage was created for our module under the guidance of our professor, Yuta.
-      Here, we document our findings week by week. Join us in our learning journey by clicking on the images below!
+      Weekly Documentation
     </p>
 
     <form style="text-align: center;" >
