footer text edit

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
   <br>
   <p>Back to <a href="#C H A R K I">top.</a></p>
   <br>
-  <p> <i>© 2020 by Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta. All rights reserved... Just kidding.</i> </p>
+  <p> <i>©2020 Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta.</i> </p>
   <br>
   <br>
   <br>
