--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
       </font>
       <h3>we are microbit tinkers</h3>
       
-      <a href="mailto: design@kiannelim.com" class="button" style="text-align: center;">HIRE US</a>
-      <button class="button" >HIRE US</button>
+      <button href="mailto: design@kiannelim.com"  class="button" style="text-align: center;">HIRE US</button>
     </div>
   </div>
 
