fix back to top button

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <br>
   <br>
   <br>
-  <p>Back to <a href="#C H A R K I">top.</a></p>
+  <p><a href="#C H A R K I">back to top</a></p>
   <br>
   <p> <i>©2020 Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta.</i> </p>
   <br>
