copy edit copyright text

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <br>
   <p><a href="#C H A R K I">back to top</a></p>
   <br>
-  <p> <i>©2020 Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta.</i> </p>
+  <p style="font-size:10px"> <i>©2020 Charki.</i> </p>
   <br>
   <br>
   <br>
