--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 300px; padding-right: 300px; background-color:snow;">
   <h2> About Us </h2>
     <p>
-      Just two industrial designers camping behind a whiteboard, and snacking on almonds and blueberries..
+      just two industrial designers camping behind a whiteboard, and snacking on almonds and blueberries..
     
       <br/>
       <br/>
