--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
  
 </div>
 
-<footer style="margin-left: -50px; margin-right: -50px;">
+<footer style="margin-left: -200px; margin-right: -200px; margin-bottom: -200px;>
   <br/>
   <br/>
   <br/>
