--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
  
 </div>
 
-<footer style="margin-left: -200px; margin-right: -200px; margin-bottom: -200px;>
+<footer style="margin-left: -20px; margin-left: -250px; margin-right: -250px; margin-bottom: -200px;>
   <br/>
   <br/>
   <br/>
