missing bracket fix

--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
  
 </div>
 
-<footer style="margin-left: -20px; margin-left: -250px; margin-right: -250px; margin-bottom: -200px;>
-  <br/>
-  <br/>
-  <br/>
-  <p><a href="#C H A R K I">back to top</a></p>
+<footer style="margin-left: -20px; margin-left: -300px; margin-right: -300px; margin-bottom: -200px;">
+    <br/>
+    <br/>
+    <br/>
+   <p><a href="#C H A R K I">back to top</a></p>
   <br/>
   <p style="font-size:10px"> <i>©2020 Charki.</i></p>
   <br/>
