fixing page footers

--- a/week4.html
+++ b/week4.html
@@ -67,43 +67,18 @@
     <img 
   </div>
 <!-- ------------------------------------------ END OF WEEKLY CONTENT HERE ------------------------------------------------- -->
-  <style>
-    div.header {
-    display: block; text-align: center; 
-    position: running(header);
-}
-   div.footer {
-    display: block; text-align: center;
-    position: running(footer);
-}
-@page {
-    @top-center { content: element(header) }
-}
-@page { 
-    @bottom-center { content: element(footer) }
-}
-</style>
-  <div class="footer">
-   <!-- <footer style="margin-left: -10px; margin-right: -10px;">-->
-    <br>
-    <br>
-    <br>
-    <p>
-      <a class="footerclicked" href="https://kiannelim.github.io/id2116/index.html">HOME</a> <br>
-      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week2.html" target="_blank">WEEK 2</a>   |   
-      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week3.html" target="_blank">WEEK 3</a>   |   
-      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week4.html" target="_blank">WEEK 4</a>   |   
-      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 5</a>   |   
-      <a class="footerclicked" href="https://kiannelim.github.io/id2116/week5.html" target="_blank">WEEK 6</a>
-    </p>
-    <br>
-    <p> <i>© 2020 by Charki. Proudly created by Charlotte Ho and Kianne Lim under the guidance of Yuta. All rights reserved... Just kidding.</i> </p>
-    <br>
-    <br>
-    <br>
-    <br>
-  </div>
-  <!--  </footer> -->
+<footer style="margin-left: -20px; margin-left: -300px; margin-right: -300px; margin-bottom: -200px;">
+  <br/>
+  <br/>
+  <br/>
+ <p><a href="#C H A R K I">back to top</a></p>
+<br/>
+<p style="font-size:10px"> <i>©2020 Charki.</i></p>
+<br/>
+<br/>
+<br/>
+<br/>
+</footer>
 
   </body>
 
