--- a/01.html
+++ b/01.html
@@ -6,7 +6,7 @@
   <title>Charki-Week 2</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
-
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
   <div class="hero-image">
    <div class="hero-text">
      <font size="+4"><h1> <b>Weekly Documentation</b> </h1></font>
