--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
   <head>
    <meta charset="utf-8">
-   <title>Charki-Home</title>
+   <title>Charki</title>
    <link rel="stylesheet" type="text/css" href="style.css">
    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
+   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
    <style>
     div{
     margin-top: -10px;
