--- a/01.html
+++ b/01.html
@@ -27,15 +27,12 @@
   <div style="padding-top: 60px; padding-bottom: 60px; padding-left: 250px; padding-right: 250px; background-color: snow">
     <h2 style="font-size: 25px; font-weight: bold; text-align: left;">Class Exercise</h2>
     <p class="pcontent">
-      Today, we were introduced to HTML and CSS. This was the day that this website was born.
-      <br>
-      <br>
-      We also learned tried connecting electrical components to the microbit via a breadboard.
-      We thought we could escape Physics but no!
+      Today, we were introduced to HTML and CSS. This was the day that this website was born. We also learned tried connecting electrical components to the microbit via a breadboard.
     </p>
-
+    <br/>
     <p class="pcontent">
       <img style="text-align: center;" src="IMAGE/gif_variableresistor.gif"; height="50%"> <br>
+      <br/>
       We used components like;
       <ul>
         <li>LED</li>
@@ -46,7 +43,7 @@
     </p>
 
     <p class="pcontent">
-      <i>Problems faced</i> <br>
+      <h3>Problems faced</h3> <br>
       It was a little tricky trying to make the variable resistor work because the varying resistor in the diagram looked 
       different from the actual component. But with some technical knowledge and a few attempts, we were able to make it work! 
       The feeling of accomplishment made the confusion worthwhile.
@@ -54,29 +51,22 @@
 
     <p class="pcontent">
       <i>Lessons learnt</i> <br>
-      I think the greatest takeaway from this lesson was the basic knowledge of building a website from scratch. I was suddenly 
-      exposed to a world of possibilties - where (almost) anything can be created with logical thinking. <br>
-      Through this exercise, I went on to further explore various functions within a website. Some include;
+      The biggest takeaway from this lesson was the basic knowledge of building a website from scratch. We explored various functions within a website:
       <ul>
-        <li>Adding hyperlinks (for pages within and outside this webpage);</li>
-        <li>Creating hyperlinks that open in a new tab (instead of redirecting);</li>
-        <li>Creating links that allow readers to scroll straight to a specific line on the page;</li>
-        <li>Creating margins (this improved the look of the webpage significantly);</li>
-        <li>Adding a horizontal line (for segmantation);</li>
-        <li>Breaking a line (like "enter", except that html ignores and "enters" made here and the words just clump up);</li>
+        <li>Adding hyperlinks</li>
+        <li>Creating hyperlinks that open in a new tab</li>
+        <li>Creating anchor links;</li>
+        <li>Creating margins;</li>
+        <li>Adding a horizontal line;</li>
+        <li>Breaking a line;</li>
         <li>Adding emojis and gifs. &#128515</li>
       </ul>
     </p>
 
     <p class="pcontent">
-      Although I still wondered why I would go through all this trouble when I could already build (an even better) and
-      update (an even more convenient) platform using Wix or Weebly.
-    </p>
-
-    <p class="pcontent">
       <i>Possible applications</i> <br>
-      With the ability to connect and control external components to the mircrobit, we could perhaps attach other critical sensors 
-      and perhaps a battery casing to power the microbit remotely. <br>
+      With the ability to connect and control external components to the mircrobit, we can attach other useful sensors 
+      and external power source to power the microbit remotely. <br>
     </p>
   </div>
 
