--- a/01.html
+++ b/01.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Charki-Week 2</title>
+  <title>01 Charki</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/x-icon" href="favicon.png">
