--- a/03.html
+++ b/03.html
@@ -3,7 +3,7 @@
   
 <head>
   <meta charset="utf-8">
-  <title>Charki-Week 4</title>
+  <title>03 Charki</title>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,700&display=swap" rel="stylesheet">
 
